# ds-cicd-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
notebooks/: 01_exploration.ipynb
src/ds_demo/: __init__.py
src/ds_demo/api/: app.py
src/ds_demo/data/: make_dataset.py
src/ds_demo/features/: build_features.py
src/ds_demo/models/: predict.py  train.py
tests/integration/: test_api.py
tests/unit/: test_features.py  test_models.py
