[project]
name = "ds-cicd-demo"
version = "0.1.0"
description = "Iris flower species classifier — teaching demo for DS CI/CD best practices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "scikit-learn>=1.5",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pandas>=2.2",
  "numpy>=2.0",
  "pydantic>=2.7",
  "joblib>=1.4",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5",
  "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ds_demo"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
